# legal_rag

./: .gitignore  LICENSE  README.md  brainstorming.md  demo.ipynb  demo.py  demo_install.py  design.md  pyproject.toml  requirements.txt
pipelines/: colbert_legal_french_evaluation.yaml  colbert_legal_french_index.yaml  colbert_xm_index.yaml  colbert_xm_lt_afdt_index.yaml  colbert_xm_lt_cafr_index.yaml  colbertv1_camembert_mmarco_fr_index.yaml  colbertv2_camembert_l4_mmarco_fr_index.yaml  colbertv2_mmarco_fr_evaluation.yaml  colbertv2_mmarco_fr_index.yaml  generate_questions.yaml  jina_colbert_v2_index.yaml  legal_rag_evaluation.yaml  lfm2_colbert_350m_evaluation.yaml  lfm2_colbert_350m_index.yaml
scripts/: agent.py  analyze_retrieval_results.py  batch_query.py  demo.py  generate_question.py  indexer.py  mwe_retrieval.py  query_index.py  test_tools.py  tools.py
src/legal_rag/: __init__.py  agent.py  assets.py  chunking.py  colbert_utils.py  indexer.py  retriever.py  tools.py
tests/: test_agent_encoder_loader.py  test_assets.py  test_build_index.py  test_chunking.py  test_generate_question.py  test_index_creation.py  test_index_path_resolution.py  test_indexer_integration.py  test_pipeline.py  test_tools.py
