[project]
name = "demo-legal-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "absl-py>=2.3.1",
    "datasets>=4.4.1",
    "etils[eapp,edc,epath,epy]>=1.13.0",
    "grain>=0.2.14",
    "jinja2>=3.1.6",
    "pylate>=1.3.4",
    "tokenizers>=0.22.1",
    "toolz>=1.1.0",
]

[dependency-groups]
dev = [
    "pdbp>=1.8.1",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
]
